# snakemake-argparse-bridge

./: CHANGELOG.md  pyproject.toml
src/snakemake_argparse_bridge/: __init__.py
tests/scripts/: process_sample.py
